[package]
name = "multiuser-logging-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"]}
serde = { version = "1.0.61", features = ["derive"] }
warp = {version="0.3"}
bytes = "1.6.0"
bincode = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.7.10", optional = true }
reqwest = { version = "0.12.5", optional = true, features = ["json"] }

[features]
sdk = ["reqwest"]
storage = ["tokio-postgres"]
memory = []
default = ["storage", "memory", "sdk"]
